# sub-lint

./: Cargo.toml  Dioxus.toml  flake.nix  index.html  main.css
.github/workflows/: release.yaml
assets/dioxus/: sub-lint.js  sub-lint_bg.wasm
assets/dioxus/snippets/dioxus-interpreter-js-7c1300c6684e1811/: inline0.js
src/: content.rs  main.rs  message.rs
src/lints/: mod.rs  non_regex.rs  regex.rs
