[package]
name = "sub-lint"
description = "A simple linting tool"
version = "0.1.0"
authors = ["Nico <nico_verdeille@hotmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
enum_dispatch = "0.3.13"
regex = "1.10.5"
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"